--- a/notebooks/run_phase3_colab.ipynb
+++ b/notebooks/run_phase3_colab.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "ed51cee9",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,13 @@
      "output_type": "stream",
      "text": [
       "/content/repo\n",
-      "[INFO] device: cuda\n"
+      "[INFO] device: cuda\n",
+      "epoch 1/2: 100% 976/976 [00:07<00:00, 122.22it/s, loss=7.59]\n",
+      "epoch 2/2: 100% 976/976 [00:07<00:00, 131.69it/s, loss=7.59]\n",
+      "item-embeddings: 100% 10/10 [00:00<00:00, 549.58it/s]\n",
+      "/content/repo/ml/recommender/train.py:323: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
+      "  \"trained_at\": datetime.utcnow().isoformat() + \"Z\",\n",
+      "[DONE] Training done. Artifacts saved to: ml/registry/recommender\n"
      ]
     }
    ],
@@ -384,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "id": "ac1d3302",
    "metadata": {},
    "outputs": [
@@ -393,43 +399,51 @@
      "output_type": "stream",
      "text": [
       "/content/repo\n",
-      "remote: Enumerating objects: 9, done.\u001b[K\n",
-      "remote: Counting objects: 100% (9/9), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (2/2), done.\u001b[K\n",
-      "remote: Total 5 (delta 3), reused 5 (delta 3), pack-reused 0 (from 0)\u001b[K\n",
-      "Unpacking objects: 100% (5/5), 1.65 KiB | 1.65 MiB/s, done.\n",
+      "remote: Enumerating objects: 13, done.\u001b[K\n",
+      "remote: Counting objects: 100% (13/13), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+      "remote: Total 7 (delta 4), reused 7 (delta 4), pack-reused 0 (from 0)\u001b[K\n",
+      "Unpacking objects: 100% (7/7), 3.98 KiB | 582.00 KiB/s, done.\n",
       "From https://github.com/malikee00/hm-recommender-system\n",
-      "   e93cb89..7b4797d  main       -> origin/main\n",
-      "Updating e93cb89..7b4797d\n",
+      "   7b4797d..d39244e  main       -> origin/main\n",
+      "Updating 7b4797d..d39244e\n",
       "Fast-forward\n",
-      " ml/recommender/evaluate.py | 128 \u001b[32m++++++++++++++++++++++++++++++\u001b[m\u001b[31m---------------\u001b[m\n",
-      " 1 file changed, 86 insertions(+), 42 deletions(-)\n"
+      " ml/recommender/evaluate.py       |  68 \u001b[32m++\u001b[m\u001b[31m---\u001b[m\n",
+      " notebooks/run_phase3_colab.ipynb | 524 \u001b[32m++++++++++++++++++++++++++++\u001b[m\u001b[31m-----------\u001b[m\n",
+      " 2 files changed, 395 insertions(+), 197 deletions(-)\n",
+      "^C\n",
+      "total 8\n",
+      "drwxr-xr-x 2 root root 4096 Jan 15 04:01 .\n",
+      "drwxr-xr-x 3 root root 4096 Jan 15 04:01 ..\n"
      ]
     }
    ],
    "source": [
     "%cd /content/repo\n",
-    "!git pull"
+    "!git pull\n",
+    "!python -u -m ml.recommender.evaluate --feature_store_dir data/feature_store --registry_dir ml/registry/recommender --reports_dir ml/reports/recommender --ks 5,10,20\n",
+    "!ls -la ml/reports/recommender"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "7ef0cee5",
+   "execution_count": 53,
+   "id": "69ac743e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/content/repo\n",
-      "^C\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel 'Python 3 (ipykernel)'. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details. Unable to get resolved server information for google.colab:colab:a9567727-c0d8-4d79-b327-cec5a095993b"
      ]
     }
    ],
    "source": [
     "%cd /content/repo\n",
-    "!python -u -m ml.recommender.evaluate --feature_store_dir data/feature_store --registry_dir ml/registry/recommender --reports_dir ml/reports/recommender --ks 5,10,20"
+    "!set -x; python -u -m ml.recommender.evaluate --feature_store_dir data/feature_store --registry_dir ml/registry/recommender --reports_dir ml/reports/recommender --ks 5,10,20; echo \"EXIT_CODE=$?\""
    ]
   },
   {
@@ -680,18 +694,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
   }
  },
  "nbformat": 4,
