chore: redeploying on locall through html and fast API

--- a/notebooks/run_training_test.ipynb
+++ b/notebooks/run_training_test.ipynb
@@ -9977,7 +9977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9176d983",
    "metadata": {},
    "outputs": [
@@ -9985,8 +9985,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PROJECT_ROOT: C:\\Users\\kamil\\Documents\\SELF PROJECT\\BIG ML Project\\H&M\n",
-      "REGISTRY_RUN: C:\\Users\\kamil\\Documents\\SELF PROJECT\\BIG ML Project\\H&M\\ml\\registry\\recommender\\run_2m_e2_v4_bpr\n",
       "customer_id: 3a90a1b9c8b3cc6a73ed007b774c868113af5e4b9ff4ce214f673a8102a2da44\n",
       "fallback: False\n"
      ]
@@ -10012,77 +10010,88 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>rank</th>\n",
        "      <th>article_id</th>\n",
-       "      <th>score</th>\n",
+       "      <th>calibrated_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>926015001</td>\n",
        "      <td>0.972114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>910568002</td>\n",
-       "      <td>0.972114</td>\n",
+       "      <td>0.971142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>926938001</td>\n",
-       "      <td>0.972114</td>\n",
+       "      <td>0.970170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>179208008</td>\n",
-       "      <td>0.972114</td>\n",
+       "      <td>0.969198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>931720001</td>\n",
-       "      <td>0.972114</td>\n",
+       "      <td>0.968226</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>6</td>\n",
        "      <td>367372001</td>\n",
-       "      <td>0.972114</td>\n",
+       "      <td>0.967254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>7</td>\n",
        "      <td>795013001</td>\n",
-       "      <td>0.972114</td>\n",
+       "      <td>0.966282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>8</td>\n",
        "      <td>806605002</td>\n",
-       "      <td>0.972114</td>\n",
+       "      <td>0.965309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>9</td>\n",
        "      <td>603686001</td>\n",
-       "      <td>0.972114</td>\n",
+       "      <td>0.964337</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>10</td>\n",
        "      <td>379963002</td>\n",
-       "      <td>0.972114</td>\n",
+       "      <td>0.963365</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  article_id     score\n",
-       "0  926015001  0.972114\n",
-       "1  910568002  0.972114\n",
-       "2  926938001  0.972114\n",
-       "3  179208008  0.972114\n",
-       "4  931720001  0.972114\n",
-       "5  367372001  0.972114\n",
-       "6  795013001  0.972114\n",
-       "7  806605002  0.972114\n",
-       "8  603686001  0.972114\n",
-       "9  379963002  0.972114"
+       "   rank article_id  calibrated_score\n",
+       "0     1  926015001          0.972114\n",
+       "1     2  910568002          0.971142\n",
+       "2     3  926938001          0.970170\n",
+       "3     4  179208008          0.969198\n",
+       "4     5  931720001          0.968226\n",
+       "5     6  367372001          0.967254\n",
+       "6     7  795013001          0.966282\n",
+       "7     8  806605002          0.965309\n",
+       "8     9  603686001          0.964337\n",
+       "9    10  379963002          0.963365"
       ]
      },
      "execution_count": 1,
@@ -10366,11 +10375,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "acca3fc6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROJECT_ROOT: C:\\Users\\kamil\\Documents\\SELF PROJECT\\BIG ML Project\\H&M\n",
+      "FEATURE_STORE_DIR: C:\\Users\\kamil\\Documents\\SELF PROJECT\\BIG ML Project\\H&M\\data\\feature_store\n",
+      "REGISTRY_RUN_DIR: C:\\Users\\kamil\\Documents\\SELF PROJECT\\BIG ML Project\\H&M\\ml\\registry\\recommender\\run_2m_e2_v4_bpr\n",
+      "\n",
+      "Artifacts:\n",
+      "two_tower_model: True C:\\Users\\kamil\\Documents\\SELF PROJECT\\BIG ML Project\\H&M\\ml\\registry\\recommender\\run_2m_e2_v4_bpr\\two_tower_model.pt\n",
+      "faiss.index   : True C:\\Users\\kamil\\Documents\\SELF PROJECT\\BIG ML Project\\H&M\\ml\\registry\\recommender\\run_2m_e2_v4_bpr\\faiss.index\n",
+      "encoders      : True C:\\Users\\kamil\\Documents\\SELF PROJECT\\BIG ML Project\\H&M\\ml\\registry\\recommender\\run_2m_e2_v4_bpr\\feature_encoders.json\n",
+      "popularity    : True C:\\Users\\kamil\\Documents\\SELF PROJECT\\BIG ML Project\\H&M\\ml\\registry\\recommender\\run_2m_e2_v4_bpr\\item_popularity.csv\n",
+      "metadata      : True C:\\Users\\kamil\\Documents\\SELF PROJECT\\BIG ML Project\\H&M\\ml\\registry\\recommender\\run_2m_e2_v4_bpr\\metadata.json\n",
+      "\n",
+      "metadata keys: ['model_type', 'objective', 'neg_sampling', 'popular_power', 'popular_top_n', 'mixed_alpha', 'embedding_dim', 'epochs', 'batch_size', 'lr']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "import json\n",
+    "\n",
+    "PROJECT_ROOT = Path(r\"C:\\Users\\kamil\\Documents\\SELF PROJECT\\BIG ML Project\\H&M\")\n",
+    "\n",
+    "os.environ[\"PROJECT_ROOT\"] = str(PROJECT_ROOT)\n",
+    "os.environ[\"FEATURE_STORE_DIR\"] = str(PROJECT_ROOT / \"data\" / \"feature_store\")\n",
+    "os.environ[\"REGISTRY_DIR\"] = str(PROJECT_ROOT / \"ml\" / \"registry\" / \"recommender\")\n",
+    "os.environ[\"RUN_ID\"] = \"run_2m_e2_v4_bpr\"\n",
+    "\n",
+    "from app.config import AppConfig\n",
+    "\n",
+    "cfg = AppConfig.from_env()\n",
+    "\n",
+    "print(\"PROJECT_ROOT:\", cfg.project_root)\n",
+    "print(\"FEATURE_STORE_DIR:\", cfg.feature_store_dir)\n",
+    "print(\"REGISTRY_RUN_DIR:\", cfg.registry_run_dir)\n",
+    "\n",
+    "print(\"\\nArtifacts:\")\n",
+    "print(\"two_tower_model:\", cfg.two_tower_model_path.exists(), cfg.two_tower_model_path)\n",
+    "print(\"faiss.index   :\", cfg.faiss_index_path.exists(), cfg.faiss_index_path)\n",
+    "print(\"encoders      :\", cfg.encoders_path.exists(), cfg.encoders_path)\n",
+    "print(\"popularity    :\", cfg.item_popularity_path.exists(), cfg.item_popularity_path)\n",
+    "print(\"metadata      :\", cfg.metadata_path.exists(), cfg.metadata_path)\n",
+    "\n",
+    "with open(cfg.metadata_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "    meta = json.load(f)\n",
+    "\n",
+    "print(\"\\nmetadata keys:\", list(meta.keys())[:10])"
+   ]
   }
  ],
  "metadata": {
